[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/particles/big_flame_particle.png" type="Texture" id=1]
[ext_resource path="res://assets/misc/meteor_flame.png" type="Texture" id=2]
[ext_resource path="res://scripts/skills/MeteorShower.gd" type="Script" id=3]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 10.0
angular_velocity = 62.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 0.0
flatness = 1.0
gravity = Vector3( 0, 100, 0 )
angular_velocity = 62.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 0.0
flatness = 1.0
gravity = Vector3( 0, 100, 0 )
angular_velocity = 62.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=4]
radius = 60.0

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.21
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="MeteorShower" type="Node2D"]
script = ExtResource( 3 )

[node name="Trails" type="Node2D" parent="."]
rotation = 0.977384
scale = Vector2( 0.5, 0.5 )

[node name="Trail1" type="Particles2D" parent="Trails"]
position = Vector2( -17, -100 )
rotation = 2.18166
scale = Vector2( 7, 7 )
amount = 4
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Trail2" type="Particles2D" parent="Trails"]
position = Vector2( -86.8456, 36.5165 )
rotation = 2.35619
scale = Vector2( 7, 7 )
amount = 4
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Trail3" type="Particles2D" parent="Trails"]
position = Vector2( -90.8456, -59.4835 )
rotation = 2.13803
scale = Vector2( 10, 10 )
amount = 4
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0353527, 0.629959 )
rotation = 6.28319
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=["Fireball"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="ExplosionDelayTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="ExplosionParticle" type="Particles2D" parent="."]
scale = Vector2( 4, 4 )
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
explosiveness = 0.8
randomness = 0.25
process_material = SubResource( 5 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
